--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -49,7 +49,7 @@ body { font-size: 1em; line-height: 1.4; }
 img { vertical-align: middle; }
 
 .site-header .content, .masthead .content, .site-body .content, .home-circles .content, .home-intro .content, .site-footer .content { max-width: 978px; margin: 0 auto; padding: 0 84px; }
-@media all and (max-width: 900px) { .site-header .content, .masthead .content, .site-body .content, .home-circles .content, .home-intro .content, .site-footer .content { max-width: none; padding-left: 30px; padding-right: 30px; } }
+@media all and (max-width: 940px) { .site-header .content, .masthead .content, .site-body .content, .home-circles .content, .home-intro .content, .site-footer .content { max-width: none; padding-left: 30px; padding-right: 30px; } }
 @media all and (max-width: 760px) { .site-header .content, .masthead .content, .site-body .content, .home-circles .content, .home-intro .content, .site-footer .content { padding-left: 30px; padding-right: 30px; } }
 
 .enews .controls, .site-body .content, .sidebar-enews .controls, .home-circles .content, .event-toc-1, .site-footer .content { *zoom: 1; }
@@ -193,7 +193,7 @@ blockquote + p { margin-top: 2.8em; }
 .site-header .content { height: 84px; padding-top: 1.5em; padding-bottom: 2.25em; }
 .site-header .secondary-content { max-width: 618px; margin: 0 auto; padding-left: 444px; padding-right: 84px; }
 .site-header .logo { float: left; width: 306px; margin-left: -360px; }
-@media all and (max-width: 900px) { .site-header { font-size: 13px; }
+@media all and (max-width: 940px) { .site-header { font-size: 13px; }
   .site-header .logo { width: 252px; margin-left: -306px; }
   .site-header .content { max-width: none; padding-left: 336px; }
   .site-header .secondary-content { max-width: none; padding-left: 336px; padding-right: 30px; } }
@@ -235,15 +235,15 @@ blockquote + p { margin-top: 2.8em; }
 
 .secondary-nav { display: block; position: absolute; z-index: 1; width: 100%; height: 3em; top: 0; left: 0; text-align: right; }
 .secondary-nav .secondary-content { display: block; }
-.secondary-nav .links { width: 100%; position: relative; text-align: justify; }
+.secondary-nav .links { width: 100%; max-width: 29.5em; position: relative; text-align: justify; }
 .secondary-nav .links:after { width: 100%; content: ""; }
 .secondary-nav div { display: inline-block; vertical-align: middle; }
 .secondary-nav ul, .secondary-nav li { line-height: 1; }
 .secondary-nav ul { display: inline; word-spacing: 0; }
 .secondary-nav li { display: inline-block; padding: 0.75em 0; vertical-align: top; }
-.secondary-nav .badge { padding: 0 0 0 1.5em; }
+.secondary-nav .badge { padding: 0; }
 .secondary-nav .badge a { margin: 0; color: #fff; }
-.secondary-nav a { display: block; padding: 0 1.63636em; font-size: 0.6875em; line-height: 2.18182; text-transform: uppercase; letter-spacing: 1px; color: #bbcad2; }
+.secondary-nav a { display: block; padding: 0 0.54545em; font-size: 0.6875em; line-height: 2.18182; text-transform: uppercase; letter-spacing: 1px; color: #bbcad2; }
 .secondary-nav a:hover, .secondary-nav a:focus { color: #2494a2; }
 .secondary-nav li:first-child a { padding-left: 0; }
 .secondary-nav li:last-child a { padding-right: 0; }
@@ -286,7 +286,7 @@ blockquote + p { margin-top: 2.8em; }
   .masthead .vignette { display: none; } }
 .site-body .content { max-width: 618px; padding-top: 2.25em; padding-bottom: 2.25em; padding-left: 444px; }
 .site-body .page-sidebar { float: left; width: 306px; margin-left: -360px; }
-@media all and (max-width: 900px) { .site-body .page-sidebar { width: 252px; margin-left: -306px; }
+@media all and (max-width: 940px) { .site-body .page-sidebar { width: 252px; margin-left: -306px; }
   .site-body .content { max-width: none; padding-left: 336px; } }
 @media all and (max-width: 760px) { .site-body .page-sidebar { display: none; }
   .site-body .content { max-width: none; padding-left: 30px; } }
@@ -346,7 +346,7 @@ blockquote + p { margin-top: 2.8em; }
 .home-circles .title { margin: 0 0 0.25em; font: normal 1.5em/1.25 "Neue Helvetica W01", sans-serif; font-weight: 700; color: #fff; }
 .home-circles p { margin: 0.5em 0 0; font: normal 0.75em/1.5 "Neue Helvetica W01", sans-serif; font-weight: 400; color: #fff; }
 @media all and (max-width: 1000px) { .home-circles .title { font-size: 1.25em; } }
-@media all and (max-width: 900px) { .home-circles .title { font-size: 1.5em; }
+@media all and (max-width: 940px) { .home-circles .title { font-size: 1.5em; }
   .home-circles p { display: none; } }
 @media all and (max-width: 760px) { .home-circles { display: none; } }
 
