--- a/www/wp-content/themes/yana/css/_events.scss
+++ b/www/wp-content/themes/yana/css/_events.scss
@@ -1,9 +1,40 @@
+///////////////////////////
+// Events
+///////////////////////////
 .event-info {
-  // TODO
+  float: right;
+  width: em(222px);
+  margin: 0 0 em(30px) em(30px);
+  border: 1px solid #e4e4e4;
+  background: #f6f6f6 none;
+
+  .title {
+    margin: 0;
+    padding: em(12px,14px) em(18px,14px);
+    @include sans-bold(em(14px), (16/14));
+    text-transform: uppercase;
+    color: #fff;
+    background: #51bdb5 none;
+  }
+
+  .inner {
+    padding: 0 em(18px) em(12px);
+  }
+
   p {
-    @include sans-condensed(em(20px), (24/20));
+    margin: em(12px,18px) 0;
+    @include sans-condensed(em(18px,16px), (24/18));
   }
 }
+
+@media all and (max-width: em(380px)) {
+  .event-info {
+    clear: both;
+    float: none;
+    margin: em(30px) 0;
+  }
+}
+
 
 .event-toc {
   .entry {
