--- a/www/wp-content/themes/yana/css/_sidebar.scss
+++ b/www/wp-content/themes/yana/css/_sidebar.scss
@@ -18,6 +18,10 @@
     @include sans-roman(em(16px), (24/16));
     text-align: left;
     color: $lightgrey;
+
+    &:hover, &:focus {
+      color: #979797;
+    }
   }
 }
 
@@ -117,7 +121,6 @@
 
 
 .sidebar-thank-yous {
-
   .title-wrap {
     position: relative;
     margin-top: 24px;
@@ -126,15 +129,35 @@
     background: transparent url("img/sidebar-thank-you-banner.svg") 50% 0 no-repeat;
     background-size: contain;
     z-index: 3;
+
+    .no-svg { background-image: url("img/sidebar-thank-you-banner.png");}
   }
 
   .title {
-
+    height: em(24px);
     margin: 0;
-    padding: em(24px,12px) em(18px,12px) em(36px,12px);
-    @include sans-bold(em(12px), (24/12));
+    padding: em(21px) em(18px) em(39px);
+    font-size: 1em;
+    line-height: em(24px);
     text-align: center;
     color: #fff;
+  }
+
+  .logo {
+    @extend %image-replacement;
+    display: inline-block;
+    width: em(72px);
+    height: em(24px);
+    margin-right: em(6px);
+    vertical-align: middle;
+    background: transparent url("img/logo-inverted.svg") 0 50% no-repeat;
+    background-size: 100% 100%;
+  }
+
+  .text {
+    display: inline-block;
+    @include sans-bold(em(12px), (24/12));
+    vertical-align: middle;
   }
 
   .frame {
@@ -180,7 +203,11 @@
     border-top: 0;
   }
 
-
+  @include breakpoint(tablet) {
+    .title-wrap {
+      font-size: 13px;
+    }
+  }
 
 }
 
