--- a/www/wp-content/themes/yana/css/_typography.scss
+++ b/www/wp-content/themes/yana/css/_typography.scss
@@ -34,12 +34,12 @@ body {
 }
 
 a {
-  color: $darkteal;
+  color: $lightteal;
   text-decoration: none;
   transition: 100ms color ease-out;
 
   &:hover, &:focus {
-    color: $lightteal;
+    color: darken($lightteal, 15%);
   }
 }
 
