--- a/www/wp-content/themes/yana/css/_masthead.scss
+++ b/www/wp-content/themes/yana/css/_masthead.scss
@@ -44,7 +44,7 @@ $vignette-height: 480px;
   .masthead-title {
     margin: em(12px,60px);
     @include mono-bold(em(60px), (72/60));
-    text-shadow: 1px 1px 1px rgba(#000, 0.2);
+    text-shadow: 0px 2px 2px rgba(#000, 0.2);
 
     .home & {
       @include mono-bold(em(84px), 1);
@@ -54,7 +54,8 @@ $vignette-height: 480px;
   p {
     margin: em(12px,18px);
     @include sans-roman(em(18px), (32/18));
-    color: rgba(#fff, 0.75);
+    text-shadow: 0px 2px 2px rgba(#000, 0.2);
+    color: #fff;
   }
 
   .text-wrap {
