--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -61,8 +61,8 @@ img { vertical-align: middle; }
 
 .skip-link, .icon-badge .label { clip: rect(0 0 0 0); width: 1px; height: 1px; margin: -1px; padding: 0; border: 0; overflow: hidden; position: absolute; }
 
-.site-header .logo a, .site-footer .footer-about .logo { display: block; background-color: transparent; border: 0; overflow: hidden; }
-.site-header .logo a:before, .site-footer .footer-about .logo:before { content: ""; display: block; width: 0; height: 150%; }
+.site-header .logo a, .sidebar-thank-yous .logo, .site-footer .footer-about .logo { display: block; background-color: transparent; border: 0; overflow: hidden; }
+.site-header .logo a:before, .sidebar-thank-yous .logo:before, .site-footer .footer-about .logo:before { content: ""; display: block; width: 0; height: 150%; }
 
 @font-face { font-family: 'icomoon'; src: url("fonts/icomoon.eot"); src: url("fonts/icomoon.eot?#iefix") format("embedded-opentype"), url("fonts/icomoon.woff") format("woff"), url("fonts/icomoon.ttf") format("truetype"), url("fonts/icomoon.svg#icomoon") format("svg"); font-weight: normal; font-style: normal; }
 
@@ -105,8 +105,8 @@ h4, .faux-heading, h4 a, .faux-heading a { color: #51bdb5; }
 
 body { margin: 0; font: normal 16px/2 "Neue Helvetica W01", sans-serif; font-weight: 400; color: #979797; }
 
-a { color: #2494a2; text-decoration: none; transition: 100ms color ease-out; }
-a:hover, a:focus { color: #51bdb5; }
+a { color: #51bdb5; text-decoration: none; transition: 100ms color ease-out; }
+a:hover, a:focus { color: #358c86; }
 
 img { display: block; width: auto; height: auto; max-width: 100%; line-height: 1; }
 
@@ -144,13 +144,13 @@ blockquote + p { margin-top: 2.8em; }
 
 .alignleft, .alignright { width: 50%; }
 
-.alignleft { float: left; margin: 0 4.85437% 1.875em 0; }
+.alignleft { float: left; margin: 0.375em 4.85437% 1.125em 0; }
 
-.alignright { float: right; margin: 0 0 1.875em 4.85437%; }
+.alignright { float: right; margin: 0.375em 0 1.125em 4.85437%; }
 
 .aligncenter img, .alignnone img, .alignleft img, .alignright img { display: block; width: 100%; max-width: 100%; height: auto; margin: 0 auto; }
 
-.wp-caption-text { margin: 1em; font-size: 0.75em; line-height: 1.5; }
+.wp-caption-text, .content .wp-caption .wp-caption-text { margin: 1em 0.5em; font-size: 0.75em; line-height: 1.5; }
 
 .embed { margin: 1.875em 0; }
 .embed .inner { width: 100%; position: relative; height: 0; padding-bottom: 56.25%; }
@@ -226,9 +226,9 @@ blockquote + p { margin-top: 2.8em; }
 .high-contrast .primary-nav li:nth-child(4n+4) a { color: #b9380e !important; }
 .primary-nav .sub-menu { display: none; z-index: 20; height: 0; position: absolute; width: 12em; top: 3em; left: 50%; margin-left: -6em; padding: 0.75em 0; border: 1px solid #E4E4E4; border-radius: 12px; background: #fff; }
 .primary-nav .sub-menu li { display: block; margin: 0; padding: 0; }
-.primary-nav .sub-menu a { display: block; margin: 0; padding: 0.8em 1.6em; font: normal 0.9375em/1.33333 "Neue Helvetica W01", sans-serif; font-weight: 500; text-transform: lowercase; }
+.primary-nav .sub-menu a { display: block; margin: 0; padding: 0.8em 1.6em; font: normal 0.9375em/1.33333 "Neue Helvetica W01", sans-serif; font-weight: 500; text-transform: lowercase; text-align: left; }
 .primary-nav .sub-menu li a, .primary-nav .sub-menu li:nth-child(1n+1) a { color: #B1B1B1; }
-.primary-nav .sub-menu li a:hover, .primary-nav .sub-menu li a:focus, .primary-nav .sub-menu li:nth-child(1n+1) a:hover, .primary-nav .sub-menu li:nth-child(1n+1) a:focus { background: #e4e4e4; }
+.primary-nav .sub-menu li a:hover, .primary-nav .sub-menu li a:focus, .primary-nav .sub-menu li:nth-child(1n+1) a:hover, .primary-nav .sub-menu li:nth-child(1n+1) a:focus { background: #f6f6f6; }
 .primary-nav .sub-menu:before { content: ' '; position: absolute; width: 0; height: 0; left: 5.25em; top: -1.5em; border: 0.75em solid; border-color: transparent transparent #E4E4E4; }
 .primary-nav .sub-menu:after { content: ' '; position: absolute; width: 0; height: 0; left: 5.3125em; top: -1.3125em; border: 0.6875em solid; border-color: transparent transparent #fff; }
 .primary-nav li:hover .sub-menu, .primary-nav li:focus .sub-menu { display: block; height: auto; }
@@ -243,7 +243,7 @@ blockquote + p { margin-top: 2.8em; }
 .secondary-nav li { display: inline-block; padding: 0.75em 0; vertical-align: top; }
 .secondary-nav .badge { padding: 0; }
 .secondary-nav .badge a { margin: 0; color: #fff; }
-.secondary-nav a { display: block; padding: 0 0.54545em; font-size: 0.6875em; line-height: 2.18182; text-transform: uppercase; letter-spacing: 1px; color: #bbcad2; }
+.secondary-nav a { display: block; padding: 0 0.5em; font-size: 0.75em; line-height: 2; text-transform: uppercase; letter-spacing: 1px; color: #b1b1b1; }
 .secondary-nav a:hover, .secondary-nav a:focus { color: #2494a2; }
 .secondary-nav li:first-child a { padding-left: 0; }
 .secondary-nav li:last-child a { padding-right: 0; }
@@ -272,9 +272,9 @@ blockquote + p { margin-top: 2.8em; }
 .masthead .vignette .content { height: 480px; }
 .masthead .vignette img { float: right; display: block; width: auto; height: 480px; }
 .masthead .masthead-title, .masthead p { color: #fff; }
-.masthead .masthead-title { margin: 0.2em; font: 700 3.75em/1.2 "ITC American Typewriter W01", monospace; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2); }
+.masthead .masthead-title { margin: 0.2em; font: 700 3.75em/1.2 "ITC American Typewriter W01", monospace; text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2); }
 .home .masthead .masthead-title { font: 700 5.25em/1 "ITC American Typewriter W01", monospace; }
-.masthead p { margin: 0.66667em; font: normal 1.125em/1.77778 "Neue Helvetica W01", sans-serif; font-weight: 400; color: rgba(255, 255, 255, 0.75); }
+.masthead p { margin: 0.66667em; font: normal 1.125em/1.77778 "Neue Helvetica W01", sans-serif; font-weight: 400; text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2); color: #fff; }
 .masthead .text-wrap { display: table; position: relative; z-index: 6; max-width: 31.5em; height: 23.875em; }
 .masthead .text { display: table-cell; vertical-align: middle; }
 
@@ -295,6 +295,7 @@ blockquote + p { margin-top: 2.8em; }
 .sidebar-nav ul, .sidebar-nav li { margin: 0; padding: 0; font-size: 1em; list-style: none; }
 .sidebar-nav li { border-bottom: 1px solid #f0f0f0; }
 .sidebar-nav a { display: block; padding: 0.9375em 1.5em; font: normal 1em/1.5 "Neue Helvetica W01", sans-serif; font-weight: 400; text-align: left; color: #b1b1b1; }
+.sidebar-nav a:hover, .sidebar-nav a:focus { color: #979797; }
 
 .sidebar-community-quote { margin: 0 0 2.25em; padding: 0 1.5em; }
 .sidebar-community-quote blockquote { color: rgba(36, 148, 162, 0.5); }
@@ -315,7 +316,10 @@ blockquote + p { margin-top: 2.8em; }
 .sidebar-enews .controls button { width: 34.10853%; padding: 0.85714em; font: normal 14px/1.71429 "Neue Helvetica W01", sans-serif; font-weight: 400; }
 
 .sidebar-thank-yous .title-wrap { position: relative; margin-top: 24px; margin-left: -24px; margin-right: -24px; background: transparent url("img/sidebar-thank-you-banner.svg") 50% 0 no-repeat; background-size: contain; z-index: 3; }
-.sidebar-thank-yous .title { margin: 0; padding: 2em 1.5em 3em; font: normal 0.75em/2 "Neue Helvetica W01", sans-serif; font-weight: 600; text-align: center; color: #fff; }
+.sidebar-thank-yous .title-wrap .no-svg { background-image: url("img/sidebar-thank-you-banner.png"); }
+.sidebar-thank-yous .title { height: 1.5em; margin: 0; padding: 1.3125em 1.125em 2.4375em; font-size: 1em; line-height: 1.5em; text-align: center; color: #fff; }
+.sidebar-thank-yous .logo { display: inline-block; width: 4.5em; height: 1.5em; margin-right: 0.375em; vertical-align: middle; background: transparent url("img/logo-inverted.svg") 0 50% no-repeat; background-size: 100% 100%; }
+.sidebar-thank-yous .text { display: inline-block; font: normal 0.75em/2 "Neue Helvetica W01", sans-serif; font-weight: 600; vertical-align: middle; }
 .sidebar-thank-yous .frame { margin: 0 24px; border: 2px solid #E4E4E4; border-radius: 0.5em; padding: 0.25em; }
 .sidebar-thank-yous .inner { border: 1px solid #F0F0F0; border-radius: 0.5em; }
 .sidebar-thank-yous ul, .sidebar-thank-yous li { margin: 0; padding: 0; list-style: none; }
@@ -324,6 +328,7 @@ blockquote + p { margin-top: 2.8em; }
 .sidebar-thank-yous li a { display: block; padding: 2.57143em 1.71429em; font-size: 0.875em; line-height: 1.42857; color: #7CBFC7; transition: all 100ms ease-out; }
 .sidebar-thank-yous li a:hover, .sidebar-thank-yous li a:focus { color: #2494A2; background-color: #FAFAFA; }
 .sidebar-thank-yous .entry-1 { border-top: 0; }
+@media all and (max-width: 940px) { .sidebar-thank-yous .title-wrap { font-size: 13px; } }
 
 .sidebar-image-ad { position: relative; margin: 0 1.5em 2.25em; }
 .sidebar-image-ad, .sidebar-image-ad .mask, .sidebar-image-ad .link, .sidebar-image-ad .image { height: 212px; }
