--- a/www/wp-content/themes/yana/css/site.scss
+++ b/www/wp-content/themes/yana/css/site.scss
@@ -16,6 +16,7 @@ Author URI: http://dialect.ca/
 @import "body";
 @import "sidebar";
 @import "homepage";
+@import "news";
 @import "events";
 @import "footer";
 
