--- a/www/wp-content/themes/yana/css/_typography.scss
+++ b/www/wp-content/themes/yana/css/_typography.scss
@@ -134,12 +134,13 @@ blockquote + p {
   @extend %h4;
 }
 
-.btn {
+.more-link, .btn {
   display: inline-block;
   box-sizing: border-box;
   -webkit-appearance: none;
   margin: em(18px,16px) 0;
   padding: em(6px,16px) em(18px,16px);
+  font-size: 16px;
   border: 0;
   border-radius: em(6px,16px);
   @include sans-bold(em(16px,16px), (36/16));
