--- a/www/wp-content/themes/yana/css/_widgets.scss
+++ b/www/wp-content/themes/yana/css/_widgets.scss
@@ -191,3 +191,35 @@
   line-height: (20/14);
   color: #7CBFC7;
 }
+
+/// Pagination
+
+.pagination {
+  margin: em(30px) 0;
+  .page-numbers {
+    display: inline-block;
+    min-width: em(20px,15px);
+    height: em(20px,15px);
+    margin-right: em(6px,15px);
+    padding: em(7px,15px);
+    border: 1px solid #E4E4E4;
+    border-radius: em(6px,15px);
+    @include sans-condensed(em(15px), (20/15));
+    text-align: center;
+    color: $lightgrey;
+    transition: 100ms background ease-out;
+  }
+
+  a:hover, a:focus, .current {
+    background-color: #F0F0F0;
+  }
+
+  .prev, .next {
+    color: #fff;
+    background-color: #51BDB5;
+
+    &:hover, &:focus {
+      background-color: darken(#51BDB5, 10%);
+    }
+  }
+}
