Proofing tweak, tweak

--- a/www/wp-content/themes/yana/css/_homepage.scss
+++ b/www/wp-content/themes/yana/css/_homepage.scss
@@ -2,6 +2,8 @@
   position: relative;
   z-index: 6;
   margin-top: em(-120px);
+  clear: both;
+
   .content {
     @extend %inner-content-frame;
     padding-left: 0;
