--- a/www/wp-content/themes/yana/css/_news.scss
+++ b/www/wp-content/themes/yana/css/_news.scss
@@ -33,11 +33,17 @@
 }
 
 .news-toc {
+  margin: 0 0 em(30px);
   border-top: 1px solid #F0F0F0;
   .post {
     margin: 0;
-    padding: em(30px) em(54px);
+    padding-top: em(30px);
+    padding-bottom: em(30px);
     border: 1px solid #F0F0F0;
     border-width: 0 0 1px;
+  }
+
+  .more-posts {
+    margin: em(30px) 0;
   }
 }
