--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -208,8 +208,7 @@ blockquote + p { margin-top: 2.8em; }
   .site-header .content, .site-header .secondary-content { max-width: none; height: auto; padding-left: 30px; }
   .site-header .content { padding: 16px 30px; } }
 .site-header .logo { display: block; float: left; position: relative; z-index: 2; height: 84px; }
-.site-header .logo a { display: block; width: 138px; height: 84px; background: transparent url("img/header-logo.svg") 50% 0 no-repeat; background-size: 138px 84px; }
-.no-svg .site-header .logo a { background-image: url("img/header-logo.png"); }
+.site-header .logo a { display: block; width: 306px; height: 84px; background: transparent url("img/header-logo.png") 50% 0 no-repeat; background-size: 306px 84px; }
 
 .site-nav ul, .site-nav li { margin: 0; padding: 0; font-size: 1em; line-height: 1.5; list-style: none; }
 
