Link thank you homepage title

--- a/www/wp-content/themes/yana/css/_sidebar.scss
+++ b/www/wp-content/themes/yana/css/_sidebar.scss
@@ -140,7 +140,7 @@
     font-size: 1em;
     line-height: em(24px);
     text-align: center;
-    color: #fff;
+    &, & a { color: #fff; }
   }
 
   .logo {
