--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -322,7 +322,8 @@ blockquote + p { margin-top: 2.8em; }
 
 .sidebar-thank-yous .title-wrap { position: relative; margin-top: 24px; margin-left: -24px; margin-right: -24px; background: transparent url("img/sidebar-thank-you-banner.svg") 50% 0 no-repeat; background-size: contain; z-index: 3; }
 .sidebar-thank-yous .title-wrap .no-svg { background-image: url("img/sidebar-thank-you-banner.png"); }
-.sidebar-thank-yous .title { height: 1.5em; margin: 0; padding: 1.3125em 1.125em 2.4375em; font-size: 1em; line-height: 1.5em; text-align: center; color: #fff; }
+.sidebar-thank-yous .title { height: 1.5em; margin: 0; padding: 1.3125em 1.125em 2.4375em; font-size: 1em; line-height: 1.5em; text-align: center; }
+.sidebar-thank-yous .title, .sidebar-thank-yous .title a { color: #fff; }
 .sidebar-thank-yous .logo { display: inline-block; width: 4.5em; height: 1.5em; margin-right: 0.375em; vertical-align: middle; background: transparent url("img/logo-inverted.svg") 0 50% no-repeat; background-size: 100% 100%; }
 .sidebar-thank-yous .text { display: inline-block; font: normal 0.75em/2 "Neue Helvetica W01", sans-serif; font-weight: 600; vertical-align: middle; }
 .sidebar-thank-yous .frame { margin: 0 24px; border: 2px solid #E4E4E4; border-radius: 0.5em; padding: 0.25em; }
