Sidebar event ads

--- a/www/wp-content/themes/yana/css/_sidebar.scss
+++ b/www/wp-content/themes/yana/css/_sidebar.scss
@@ -37,6 +37,13 @@
   }
 }
 
+.sidebar-ad {
+  position: relative;
+  margin: 0 0 em(36px);
+
+  .frame, img { display: block; }
+}
+
 .sidebar-facebook-ad {
   position: relative;
   margin: 0 0 em(36px);
