--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -341,10 +341,8 @@ blockquote + p { margin-top: 2.8em; }
 @media all and (max-width: 940px) { .sidebar-thank-yous .title-wrap { font-size: 13px; } }
 
 .sidebar-image-ad { position: relative; margin: 0 1.5em 2.25em; }
-.sidebar-image-ad, .sidebar-image-ad .mask, .sidebar-image-ad .link, .sidebar-image-ad .image { height: 212px; }
-.sidebar-image-ad .mask, .sidebar-image-ad .link { position: absolute; width: 100%; left: 0; top: 0; }
-.sidebar-image-ad .mask { z-index: 2; background: rgba(254, 182, 45, 0.5); }
-.no-rgba .sidebar-image-ad .mask { background: transparent url("images/FEB62D-50.png") repeat; }
+.sidebar-image-ad, .sidebar-image-ad .link, .sidebar-image-ad .image { height: 212px; }
+.sidebar-image-ad .link { position: absolute; width: 100%; left: 0; top: 0; }
 .sidebar-image-ad .image { z-index: 1; }
 .sidebar-image-ad .image img { width: 100%; height: 100%; }
 .sidebar-image-ad .link { display: table; z-index: 3; text-transform: uppercase; text-align: center; color: #fff; }
